--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -46,13 +46,13 @@
       "close": "Close search"
     },
     "password_page": {
-      "opening_soon": "Online Store Launching Soon",
+      "opening_soon": "Your favorite linen store will be back soon",
       "spread_the_word": "Spread the word",
       "login_form_heading": "Enter store using password",
       "login_form_password_label": "Password",
       "login_form_password_placeholder": "Your password",
       "login_form_submit": "Enter",
-      "signup_form_heading": "Your favorite linen store will be back soon. Please bear with us as we work to give you a beautiful experience. Till then you can visit us on www.amazon.com\/solinohome\nPlease email us at hello@solinohome.com for any help you need 😊\n",
+      "signup_form_heading": "Please bear with us as we work to give you a beautiful experience. Till then you can visit us on www.amazon.com\/solinohome\nPlease email us at hello@solinohome.com for any help you need 😊",
       "signup_form_email_label": "Email",
       "signup_form_email_placeholder": "Email address",
       "signup_form_submit": "Submit",
@@ -407,7 +407,7 @@
       "sold_out": "Sold Out",
       "on_sale_from_html": "Sale",
       "new_from_html": "New",
-      "available": "Available",
+      "available": "",
       "unavailable": "Unavailable",
       "compare_at": "Compare at",
       "quantity": "Quantity",
